Switch to alpine & jlinked JRE